# AoC-2024

./: .gitignore  AoC-2024.code-workspace  aoc2024.cabal  day1.kt
aoc-haskell/: aoc-haskell.cabal  package.yaml
aoc-haskell/app/: Main.hs
aoc-haskell/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs
c/: aoc.c
c/days/: day16.c  day16.h  day17.c  day17.h  days.h  utils.c  utils.h
day2/: day2.kt
dist-newstyle/cache/: plan.json
dist-newstyle/packagedb/ghc-9.4.8/: aoc2024-0.1.0.0-inplace.conf  package.cache
haskell/: Main.hs  day1.hi  day1.hs  day2.hs
haskell/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs
kotlin/app/: build.gradle.kts
kotlin/app/src/main/kotlin/: App.kt
kotlin/app/src/main/kotlin/days/: Day1.kt  Day10.kt  Day11.kt  Day12.kt  Day2.kt  Day4.kt  Day5.kt  Day6.kt  Day7.kt  Day8.kt  Day9.kt
