cabal-version:      3.4
name:               aoc2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             May
maintainer:         MayflowerC10@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

library
    exposed-modules:  Day1,Day2,Day3,Day4,Day5
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,regex-base,regex-pcre,array,split
    hs-source-dirs:   haskell/src
    default-language: Haskell2010

executable aoc2024
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        aoc2024

    hs-source-dirs:   haskell
    default-language: Haskell2010
